@@ -3807,26 +3807,6 @@ draw_points(some_gc, points_array); //One way to draw the two points.
       <function>create_pango_layout</function>. Once created, the layout can be manipulated in various ways, including changing
       the text, font, etc. Finally, the layout can be rendered using the <function>draw_layout</function> method of <classname>Gdk::Drawable</classname>, which takes the usual <classname>Gdk::GC</classname>, an x-position, a y-position and the layout itself.
     </para>
-
-    <sect2><title>Example</title>
-    <para>
-      Here's a sample program using all of the drawing methods shown so far:
-    </para>
-
-    <figure id="figure-drawingarea-text">
-      <title>Drawing Area - Text</title>
-      <screenshot>
-        <graphic format="PNG" fileref="&url_figures_base;drawingarea_text.png"/>
-      </screenshot>
-    </figure>
-
-    <para><ulink url="&url_examples_base;drawingarea_text">Source Code</ulink></para>
-
-    <para>
-      The structure of the program is the same as the first one, except that this one includes examples of the drawing elements
-      discussed up to now.
-    </para>
-    </sect2>
   </sect1>
   <sect1 id="sec-draw_images">
     <title>Draw Images</title>
