@@ -1,3 +1,9 @@
+2005-12-01  Murray Cumming <murrayc@murrayc.com>
+
+	* docs/tutorial/gtkmm-tut.xml: Remove link to 
+	non-existing drawing_area_text example. 
+	Bug #311176 from Jonathon Jongsma.
+
 2005-11-30  Murray Cumming <murrayc@murrayc.com>
  
  	* docs/index.html: Change deprecated link to link to 
